{
    "name": "InputActions",
    "maps": [
        {
            "name": "SnakeControls",
            "id": "7a88585a-6597-469f-9e46-70662d7ac2cf",
            "actions": [
                {
                    "name": "DirectionDelta",
                    "type": "Value",
                    "id": "a2bc1aae-96b3-4750-9a7e-2c431dce6cd8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Acceleration",
                    "type": "Button",
                    "id": "d4d82960-f00f-4662-aecb-6812e219eae9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.3,pressPoint=0.3)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2191056b-b176-4d9a-8006-0eeda1915825",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "9c87fada-d923-4884-ab5c-1d29274d6545",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "ScaleVector2(x=100,y=100)",
                    "groups": "",
                    "action": "DirectionDelta",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "88d0b4d6-0655-488a-8b84-065704ef9ba1",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionDelta",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d87254a0-7765-448e-8e26-2adf5f5b9cdd",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionDelta",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f24fa006-4635-488b-8b5c-09860344d40a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionDelta",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6e9c3751-b6d3-4e44-8cb0-d0ac3f979f8d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionDelta",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "69b55363-3666-4b46-81fb-884eac029f33",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c60da38-beb9-4ab8-9579-6e8e58a292a1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}